--- a/app/js/locales/ru-ru.json
+++ b/app/js/locales/ru-ru.json
@@ -170,10 +170,10 @@
     "relative_time_pluralize_minutes_ago": "{'one': '1 минуту назад', 'other': '{} минут(ы) назад'}",
     "relative_time_pluralize_hours_ago": "{'one': '1 час назад', 'other': '{} часа(-ов) назад'}",
     "relative_time_just_now": "только что",
-    "changelog_modal_header_recent_updates_md": "Последние обновления в **веб-клиенте Telegram**",
-    "changelog_modal_header_new_updates_md": "**Веб-клиент Telegram** обновился!",
+    "changelog_modal_header_recent_updates_md": "Последние обновления в **веб-клиенте Kotatogram**",
+    "changelog_modal_header_new_updates_md": "**Веб-клиент Kotatogram** обновился!",
     "changelog_modal_title_current_version": "текущая версия",
-    "changelog_modal_full_description_md": "Official free messaging app based on Telegram API for speed and security.\n\nThis software is licensed under GNU GPL version 3.",
+    "changelog_modal_full_description_md": "Unofficial free messaging app based on old Telegram Web.\n\nThis software is licensed under GNU GPL version 3.",
     "changelog_modal_changelog_link": "Changelog",
     "changelog_app_version": "Версия {version}",
     "group_create_contacts_modal_title": "Новая группа",
@@ -200,7 +200,7 @@
     "clipboard_press_ctrl_c": "Press Ctrl+C to copy",
     "clipboard_press_cmd_c": "Press ⌘+C to copy",
     "confirm_modal_logout": "Вы действительно хотите выйти?",
-    "confirm_modal_update_reload": "Новая версия веб-клиента Telegram загружена. Запустить?",
+    "confirm_modal_update_reload": "Новая версия веб-клиента Kotatogram загружена. Запустить?",
     "confirm_modal_history_flush": "Вы уверены? Это действие не может быть отменено!",
     "confirm_modal_history_leave_flush_md": "Are you sure, you want to delete all message history and leave the group?\n\nThis action cannot be undone.",
     "confirm_modal_leave_channel_md": "Are you sure, you want to leave this channel?\n\nThis action cannot be undone.",
@@ -227,7 +227,7 @@
     "confirm_modal_invite_peer": "Пригласить в {peer}?",
     "confirm_modal_share_game": "Share the game to {peer}?",
     "confirm_modal_apply_lang_with_reload_md": "Перезагрузить приложение для применения языка?",
-    "confirm_modal_migrate_to_https_md": "Веб-клиент Telegram теперь поддерживает дополнительное SSL-шифрование. Хотите переключиться на HTTPS?\nHTTP-версия вскоре будет отключена.",
+    "confirm_modal_migrate_to_https_md": "Веб-клиент Kotatogram теперь поддерживает дополнительное SSL-шифрование. Хотите переключиться на HTTPS?\nHTTP-версия вскоре будет отключена.",
     "confirm_modal_resize_desktop_md": "Хотите переключиться на версию для рабочего стола?",
     "confirm_modal_resize_mobile_md": "Хотите переключиться на мобильную версию?",
     "confirm_modal_recovery_email_empty_md": "Внимание! Уверены, что не хотите указать адрес электронной почты для восстановления?\n\nЕсли вы забудете пароль, то утратите доступ к вашему аккаунту Telegram",
@@ -384,7 +384,7 @@
     "error_modal_no_phone_user_description_md": "К сожалению, к вашему телефону не привязан аккаунт **Telegram**.",
     "error_modal_no_phone_users_description_md": "К сожалению, ни к одному из введённых номеров не привязан аккаунт **Telegram**.",
     "error_modal_username_invalid_description": "Извините, такое имя пользователя недопустимо.",
-    "error_modal_phonebook_required_description": "Telegram требуется доступ к вашей телефонной книге для импорта контактов.",
+    "error_modal_phonebook_required_description": "Kotatogram требуется доступ к вашей телефонной книге для импорта контактов.",
     "error_modal_username_occupied_description": "Извините, такое имя пользователя уже занято.",
     "error_modal_media_not_supported_description": "Ваш браузер не может воспроизвести этот медиафайл. Попробуйте загрузить этот файл и открыть в стороннем плеере.",
     "error_modal_username_not_found_description": "Нет аккаунта Telegram с указанным вами именем пользователя.",
@@ -407,7 +407,7 @@
     "error_modal_gelocation_na": "App was unable to determine your current location",
     "error_modal_2fa_recent_confirm": "Your recent attempts to reset this account have been cancelled by its active user. Please try again in 7 days.",
     "error_modal_2fa_delayed_time_md": "You'll be able to reset your account in: **{time}**",
-    "head_telegram": "Telegram",
+    "head_telegram": "Kotatogram",
     "head_new_group": "Новая группа",
     "head_new_contact": "Новый контакт",
     "head_contacts": "Контакты",
@@ -451,7 +451,7 @@
     "im_add_contact": "Добавить контакт",
     "im_import_phonebook": "Импорт из телефонной книги",
     "im_get_started": "Начало работы",
-    "im_welcome_text": "Добро пожаловать в веб-клиент Telegram. Вы можете поменять аватар и имя в настройках.",
+    "im_welcome_text": "Добро пожаловать в веб-клиент Kotatogram. Вы можете поменять аватар и имя в настройках.",
     "im_open_settings": "Открыть настройки",
     "im_select_a_chat": "Выберите чат для начала общения",
     "im_loading_history": "Загрузка истории",
@@ -521,7 +521,7 @@
     "login_number_input_placeholder": "Введите ваш код",
     "login_checking_code": "Проверка кода",
     "login_your_info": "Информация о вас",
-    "login_fulll_name_label": "Введите свое имя для начала работы с Telegram.",
+    "login_fulll_name_label": "Введите свое имя для начала работы с Kotatogram.",
     "login_incorrect_first_name": "Некорректное имя",
     "login_first_name": "Имя",
     "login_incorrect_last_name": "Некорректная фамилия",
@@ -530,10 +530,10 @@
     "login_sign_up": "Зарегистрироваться",
     "login_about_title": "О веб-клиенте",
     "login_about_hide": "hide",
-    "login_about_desc1_md": "Веб-клиент Telegram — это бесплатный, быстрый и безопасный способ насладиться большинством функций **Telegram** прямо в вашем **веб-браузере**.",
+    "login_about_desc1_md": "Веб-клиент Kotatogram — это бесплатный, быстрый и безопасный способ насладиться большинством функций **Telegram** прямо в вашем **веб-браузере**.",
     "login_about_desc2_md": "Он всегда синхронизирован с **приложением Telegram** на вашем мобильном устройстве, что делает его идеальным инструментом для обмена сообщениями и файлами.",
     "login_about_desc3_md": "Наш {source-link: исходный код} открыт, так что каждый желающий может внести свой вклад.",
-    "login_about_intro": "Добро пожаловать в официальный веб-клиент Telegram",
+    "login_about_intro": "Добро пожаловать в неофициальный веб-клиент Kotatogram",
     "login_about_learn": "Узнать больше",
     "login_password_title": "Пароль",
     "login_password_label": "Вы включили двухэтапную аутентификацию, теперь ваш аккаунт защищён дополнительным паролем.",
@@ -563,8 +563,8 @@
     "message_attach_video_download": "Загрузить",
     "message_attach_video_save": "Сохранить файл",
     "message_attach_video_play": "Воспроизвести",
-    "message_attach_unsupported": "The message is not supported on your version of Telegram Web. Update the app to view: {link}.",
-    "message_attach_notweb": "The message is not supported on Telegram Web yet. Use Telegram mobile apps to view: {link}.",
+    "message_attach_unsupported": "The message is not supported on your version of Kotatogram Web. Update the app to view: {link}.",
+    "message_attach_notweb": "The message is not supported on Kotatogram Web yet. Use Telegram mobile apps to view: {link}.",
     "conversation_select_modal_title": "Выбрать чат",
     "conversation_select_modal_chats_contacts": "Chats and contacts",
     "conversation_one_selected": "{name1}",
@@ -576,9 +576,9 @@
     "phonebook_modal_empty": "Ваша телефонная книга пуста.",
     "phonebook_modal_submit_active": "Импорт",
     "phonebook_modal_submit": "Импортировать контакты",
-    "inactive_tab_title": "Telegram: Zzz...",
+    "inactive_tab_title": "Kotatogram: Zzz...",
     "inactive_title": "Such error, many tabs",
-    "inactive_description_md": "Telegram supports only one active tab with the app.\nPlease reload this page to continue using this tab or close it.",
+    "inactive_description_md": "Kotatogram supports only one active tab with the app.\nPlease reload this page to continue using this tab or close it.",
     "inactive_reload_btn": "Reload App",
     "push_action_mute1d": "Mute background alerts for 1 day",
     "push_action_settings": "Background alerts settings",
