Added accepted pulls from original
* Added a tooltip to the voice message button (#1916)

* Added a string for the voice recording button title

* Added a title to the voice message button

Added it twice - once for accessibility purposes on the anchor that actually activates the action (though hovering does not show this title) and the other is on the element on which the user actually clicks and hovers, in order to show the title.

* Added a title to the voice message button

--- a/app/js/locales/en-us.json
+++ b/app/js/locales/en-us.json
@@ -549,6 +549,7 @@
 	"im_emoji_tab": "Emoji",
 	"im_stickers_tab": "Stickers",
 	"im_stickers_tab_recent": "Frequently used",
+	"im_voice_record_title": "Record a message",
 	"im_media_attach_title": "Send media",
 	"im_attach_file_title": "Send file",
 	"im_emoji_btn_title": "Insert emoticon",
